objects/EmailMessage.object
<CustomObject>
    <fields>
        <fullName>ClosedDate__c</fullName>
        <label>Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_By_Profile__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <label>Created By Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Status_Value__c</fullName>
        <description>For getting text value of emai status</description>
        <formula>IF(ISPICKVAL(Status, &quot;0&quot;),&quot;New&quot;,
   IF(ISPICKVAL(Status, &quot;1&quot;),&quot;Read&quot;,  
    IF(ISPICKVAL(Status, &quot;2&quot;),&quot;Replied&quot;, 
      IF(ISPICKVAL(Status, &quot;3&quot;),&quot;Sent&quot;,  
       IF(ISPICKVAL(Status, &quot;4&quot;),&quot;Forwarded&quot;,
        IF(ISPICKVAL(Status, &quot;5&quot;),&quot;Draft&quot;,&quot;NA&quot;))))))</formula>
        <label>Email Status Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Status__c</fullName>
        <formula>IF(Incoming==TRUE,&quot;Incoming&quot;+&quot;-&quot;+Email_Status_Value__c,&quot;Outgoing&quot;+&quot;-&quot;+Email_Status_Value__c)</formula>
        <label>Email Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_SpiceJet_domain__c</fullName>
        <formula>Incoming &amp;&amp;  CONTAINS(FromAddress, &quot;@spicejet.com&quot;)</formula>
        <label>From SpiceJet domain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_AutoResponse__c</fullName>
        <formula>CreatedById=&apos;00536000002WMMQ&apos; &amp;&amp;  NOT(Incoming)</formula>
        <label>Is AutoResponse</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>